Handle palworld specific stuff

--- a/docker/server/properties.template
+++ b/docker/server/properties.template
@@ -7,5 +7,8 @@ USERGROUP <%USERGROUP%>
 GAME_ID <%GAME_ID%>
 
 PORT_SERVER <%PORT_SERVER%>
-PORT_RELIABLE <%PORT_RELIABLE%>
+PORT_PUBLIC <%PORT_PUBLIC%>
+THREAD_COUNT <%THREAD_COUNT%>
+PLAYER_COUNT <%PLAYER_COUNT%>
+IS_PUBLIC <%IS_PUBLIC%>
 AUTO_UPDATE <%AUTO_UPDATE%>
