Added Query Port

--- a/docker/server/properties.template
+++ b/docker/server/properties.template
@@ -7,7 +7,8 @@ USERGROUP <%USERGROUP%>
 GAME_ID <%GAME_ID%>
 
 PORT_SERVER <%PORT_SERVER%>
-PORT_PUBLIC <%PORT_PUBLIC%>
+PORT_API <%PORT_API%>
+PORT_QUERY <%PORT_QUERY%>
 THREAD_COUNT <%THREAD_COUNT%>
 PLAYER_COUNT <%PLAYER_COUNT%>
 IS_PUBLIC <%IS_PUBLIC%>
