Added ability to query API commands

--- a/docker/server/properties.template
+++ b/docker/server/properties.template
@@ -2,6 +2,7 @@
 
 INSTALL_DIRECTORY <%INSTALL_DIRECTORY%>
 LOG_DIRECTORY <%LOG_DIRECTORY%>
+CONFIG_DIRECTORY <%CONFIG_DIRECTORY%>
 USERNAME <%USERNAME%>
 USERGROUP <%USERGROUP%>
 GAME_ID <%GAME_ID%>
