Added API by default

--- a/docker/server/properties.template
+++ b/docker/server/properties.template
@@ -8,6 +8,8 @@ USERGROUP <%USERGROUP%>
 GAME_ID <%GAME_ID%>
 
 PORT_SERVER <%PORT_SERVER%>
+PORT_API <%PORT_API%>
+PORT_PUBLIC <%PORT_PUBLIC%>
 PORT_QUERY <%PORT_QUERY%>
 THREAD_COUNT <%THREAD_COUNT%>
 PLAYER_COUNT <%PLAYER_COUNT%>
